// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SchemaGenerator core > 'BinaryAnyOf' 1`] = `
[
  {
    "args": {
      "additionalProperties": [],
      "properties": {
        "file": [
          {
            "args": [
              {
                "keyword": "blob",
              },
              {
                "keyword": "null",
              },
            ],
            "keyword": "union",
          },
          {
            "args": {
              "format": undefined,
              "type": undefined,
            },
            "keyword": "schema",
          },
          {
            "args": "file",
            "keyword": "name",
          },
        ],
      },
    },
    "keyword": "object",
  },
  {
    "args": {
      "format": undefined,
      "type": "object",
    },
    "keyword": "schema",
  },
]
`;

exports[`SchemaGenerator core > 'EmptyAnyOf' 1`] = `
[
  {
    "args": {
      "additionalProperties": [],
      "properties": {
        "fixed_value": [
          {
            "args": [
              {
                "keyword": "unknown",
              },
              {
                "keyword": "null",
              },
            ],
            "keyword": "union",
          },
          {
            "args": {
              "format": undefined,
              "type": undefined,
            },
            "keyword": "schema",
          },
          {
            "args": "The fixed value - should accept any type or null",
            "keyword": "describe",
          },
          {
            "args": "fixed_value",
            "keyword": "name",
          },
        ],
        "payload_key": [
          {
            "args": [
              {
                "keyword": "string",
              },
              {
                "keyword": "null",
              },
            ],
            "keyword": "union",
          },
          {
            "args": {
              "format": undefined,
              "type": undefined,
            },
            "keyword": "schema",
          },
          {
            "args": "String or null",
            "keyword": "describe",
          },
          {
            "args": "payload_key",
            "keyword": "name",
          },
          {
            "keyword": "optional",
          },
        ],
      },
    },
    "keyword": "object",
  },
  {
    "args": {
      "format": undefined,
      "type": "object",
    },
    "keyword": "schema",
  },
]
`;

exports[`SchemaGenerator core > 'FullAddress' 1`] = `
[
  {
    "args": [
      {
        "args": {
          "$ref": "#/components/schemas/Address",
          "isImportable": true,
          "name": "address",
          "path": "address.ts",
        },
        "keyword": "ref",
      },
      {
        "args": {
          "format": undefined,
          "type": "object",
        },
        "keyword": "schema",
      },
      {
        "args": {
          "format": undefined,
          "type": undefined,
        },
        "keyword": "schema",
      },
      {
        "args": {
          "format": undefined,
          "type": undefined,
        },
        "keyword": "schema",
      },
      {
        "args": {
          "additionalProperties": [],
          "properties": {
            "streetName": [
              {
                "keyword": "string",
              },
              {
                "args": {
                  "format": undefined,
                  "type": "string",
                },
                "keyword": "schema",
              },
              {
                "args": "streetName",
                "keyword": "name",
              },
            ],
            "streetNumber": [
              {
                "keyword": "string",
              },
              {
                "args": {
                  "format": undefined,
                  "type": "string",
                },
                "keyword": "schema",
              },
              {
                "args": "streetNumber",
                "keyword": "name",
              },
            ],
          },
        },
        "keyword": "object",
      },
    ],
    "keyword": "and",
  },
  {
    "args": {
      "format": undefined,
      "type": undefined,
    },
    "keyword": "schema",
  },
]
`;

exports[`SchemaGenerator core > 'Owner' 1`] = `
[
  {
    "args": {
      "additionalProperties": [],
      "properties": {
        "email": [
          {
            "keyword": "email",
          },
          {
            "args": {
              "format": "email",
              "type": "string",
            },
            "keyword": "schema",
          },
          {
            "args": "email",
            "keyword": "name",
          },
          {
            "keyword": "optional",
          },
        ],
        "id": [
          {
            "keyword": "uuid",
          },
          {
            "args": {
              "format": "uuid",
              "type": "string",
            },
            "keyword": "schema",
          },
          {
            "args": "id",
            "keyword": "name",
          },
          {
            "keyword": "optional",
          },
        ],
      },
    },
    "keyword": "object",
  },
  {
    "args": {
      "format": undefined,
      "type": "object",
    },
    "keyword": "schema",
  },
]
`;

exports[`SchemaGenerator core > 'PageSize' 1`] = `
[
  {
    "keyword": "integer",
  },
  {
    "args": 1,
    "keyword": "min",
  },
  {
    "args": 10,
    "keyword": "max",
  },
  {
    "args": {
      "format": undefined,
      "type": "integer",
    },
    "keyword": "schema",
  },
  {
    "args": 20,
    "keyword": "default",
  },
]
`;

exports[`SchemaGenerator core > 'Pet' 1`] = `
[
  {
    "args": {
      "additionalProperties": [],
      "properties": {
        "enumLiteral": [
          {
            "args": {
              "asConst": true,
              "items": [
                {
                  "format": "boolean",
                  "name": true,
                  "value": true,
                },
                {
                  "format": "boolean",
                  "name": false,
                  "value": false,
                },
              ],
              "name": "PetEnumLiteral",
              "typeName": "PetEnumLiteral",
            },
            "keyword": "enum",
          },
          {
            "args": {
              "format": undefined,
              "type": "boolean",
            },
            "keyword": "schema",
          },
          {
            "args": "enumLiteral",
            "keyword": "name",
          },
          {
            "keyword": "optional",
          },
        ],
        "id": [
          {
            "keyword": "integer",
          },
          {
            "args": {
              "format": "int64",
              "type": "integer",
            },
            "keyword": "schema",
          },
          {
            "args": "id",
            "keyword": "name",
          },
        ],
        "name": [
          {
            "keyword": "string",
          },
          {
            "args": {
              "format": undefined,
              "type": "string",
            },
            "keyword": "schema",
          },
          {
            "args": "name",
            "keyword": "name",
          },
        ],
        "schema": [
          {
            "args": {
              "additionalProperties": [
                {
                  "keyword": "string",
                },
                {
                  "args": {
                    "format": undefined,
                    "type": "string",
                  },
                  "keyword": "schema",
                },
                {
                  "keyword": "nullable",
                },
              ],
              "properties": {},
            },
            "keyword": "object",
          },
          {
            "args": {
              "format": undefined,
              "type": "object",
            },
            "keyword": "schema",
          },
          {
            "args": "schema",
            "keyword": "name",
          },
          {
            "keyword": "optional",
          },
        ],
        "tag": [
          {
            "keyword": "string",
          },
          {
            "args": {
              "format": undefined,
              "type": "string",
            },
            "keyword": "schema",
          },
          {
            "args": "tag",
            "keyword": "name",
          },
          {
            "keyword": "optional",
          },
        ],
      },
    },
    "keyword": "object",
  },
  {
    "args": {
      "format": undefined,
      "type": "object",
    },
    "keyword": "schema",
  },
]
`;

exports[`SchemaGenerator core > 'Pets' 1`] = `
[
  {
    "args": {
      "items": [
        {
          "args": {
            "$ref": "#/components/schemas/Pet",
            "isImportable": true,
            "name": "pet",
            "path": "pet.ts",
          },
          "keyword": "ref",
        },
        {
          "args": {
            "format": undefined,
            "type": "object",
          },
          "keyword": "schema",
        },
      ],
      "max": undefined,
      "min": undefined,
      "unique": false,
    },
    "keyword": "array",
  },
  {
    "args": {
      "format": undefined,
      "type": "array",
    },
    "keyword": "schema",
  },
  {
    "keyword": "readOnly",
  },
]
`;

exports[`SchemaGenerator core > 'PhoneWithMaxLength' 1`] = `
[
  {
    "args": [
      {
        "args": {
          "$ref": "#/components/schemas/PhoneNumber",
          "isImportable": true,
          "name": "phoneNumber",
          "path": "phoneNumber.ts",
        },
        "keyword": "ref",
      },
      {
        "args": "^(\\+\\d{1,3}[-\\s]?)?\\(?(?:\\d{1,4})\\)?[-\\s]?\\d{1,4}[-\\s]?\\d{1,9}$",
        "keyword": "matches",
      },
      {
        "args": {
          "format": undefined,
          "type": "string",
        },
        "keyword": "schema",
      },
      {
        "keyword": "string",
      },
      {
        "args": 15,
        "keyword": "max",
      },
      {
        "args": {
          "format": undefined,
          "type": undefined,
        },
        "keyword": "schema",
      },
    ],
    "keyword": "and",
  },
  {
    "args": {
      "format": undefined,
      "type": undefined,
    },
    "keyword": "schema",
  },
]
`;

exports[`SchemaGenerator core > 'PhoneWithMaxLengthExplicit' 1`] = `
[
  {
    "args": [
      {
        "args": {
          "$ref": "#/components/schemas/PhoneNumber",
          "isImportable": true,
          "name": "phoneNumber",
          "path": "phoneNumber.ts",
        },
        "keyword": "ref",
      },
      {
        "args": "^(\\+\\d{1,3}[-\\s]?)?\\(?(?:\\d{1,4})\\)?[-\\s]?\\d{1,4}[-\\s]?\\d{1,9}$",
        "keyword": "matches",
      },
      {
        "args": {
          "format": undefined,
          "type": "string",
        },
        "keyword": "schema",
      },
      {
        "keyword": "string",
      },
      {
        "args": 15,
        "keyword": "max",
      },
      {
        "args": {
          "format": undefined,
          "type": "string",
        },
        "keyword": "schema",
      },
    ],
    "keyword": "and",
  },
  {
    "args": {
      "format": undefined,
      "type": undefined,
    },
    "keyword": "schema",
  },
]
`;

exports[`SchemaGenerator core > 'Toy' 1`] = `
[
  {
    "args": {
      "additionalProperties": [],
      "properties": {
        "description": [
          {
            "keyword": "string",
          },
          {
            "args": {
              "format": undefined,
              "type": "string",
            },
            "keyword": "schema",
          },
          {
            "keyword": "nullable",
          },
          {
            "args": "description",
            "keyword": "name",
          },
          {
            "keyword": "nullish",
          },
        ],
        "id": [
          {
            "keyword": "uuid",
          },
          {
            "args": {
              "format": "uuid",
              "type": "string",
            },
            "keyword": "schema",
          },
          {
            "args": "id",
            "keyword": "name",
          },
        ],
        "name": [
          {
            "keyword": "string",
          },
          {
            "args": {
              "format": undefined,
              "type": "string",
            },
            "keyword": "schema",
          },
          {
            "args": "name",
            "keyword": "name",
          },
          {
            "keyword": "optional",
          },
        ],
      },
    },
    "keyword": "object",
  },
  {
    "args": {
      "format": undefined,
      "type": "object",
    },
    "keyword": "schema",
  },
  {
    "args": null,
    "keyword": "default",
  },
]
`;

exports[`SchemaGenerator core > array of enums with malformed schema (enum at array level) 1`] = `
[
  {
    "args": {
      "items": [
        {
          "args": {
            "asConst": false,
            "items": [
              {
                "format": "string",
                "name": ""foo"",
                "value": "foo",
              },
              {
                "format": "string",
                "name": ""bar"",
                "value": "bar",
              },
              {
                "format": "string",
                "name": ""baz"",
                "value": "baz",
              },
            ],
            "name": "TestArrayEnum",
            "typeName": "TestArrayEnum",
          },
          "keyword": "enum",
        },
        {
          "args": {
            "format": undefined,
            "type": "string",
          },
          "keyword": "schema",
        },
      ],
      "max": undefined,
      "min": undefined,
      "unique": false,
    },
    "keyword": "array",
  },
  {
    "args": {
      "format": undefined,
      "type": "array",
    },
    "keyword": "schema",
  },
]
`;

exports[`SchemaGenerator core > combineObjects 1`] = `
[
  {
    "args": [
      {
        "args": {
          "$ref": "#/components/schemas/EventBase",
          "isImportable": true,
          "name": "EventBase",
          "path": "./typescript/src/gen/models.ts",
        },
        "keyword": "ref",
      },
      {
        "args": {
          "type": "object",
        },
        "keyword": "schema",
      },
      {
        "args": {
          "type": "object",
        },
        "keyword": "schema",
      },
      {
        "args": {
          "type": "object",
        },
        "keyword": "schema",
      },
      {
        "args": {
          "additionalProperties": [],
          "properties": {
            "id": [
              {
                "keyword": "uuid",
              },
              {
                "args": {
                  "format": "uuid",
                  "type": "string",
                },
                "keyword": "schema",
              },
              {
                "args": "id",
                "keyword": "name",
              },
            ],
            "text": [
              {
                "keyword": "string",
              },
              {
                "args": {
                  "type": "string",
                },
                "keyword": "schema",
              },
              {
                "args": "text",
                "keyword": "name",
              },
            ],
            "ts": [
              {
                "args": {
                  "offset": false,
                },
                "keyword": "datetime",
              },
              {
                "args": {
                  "format": "date-time",
                  "type": "string",
                },
                "keyword": "schema",
              },
              {
                "args": "ts",
                "keyword": "name",
              },
            ],
            "verified": [
              {
                "keyword": "boolean",
              },
              {
                "args": {
                  "type": "boolean",
                },
                "keyword": "schema",
              },
              {
                "args": "verified",
                "keyword": "name",
              },
              {
                "keyword": "optional",
              },
            ],
          },
        },
        "keyword": "object",
      },
    ],
    "keyword": "and",
  },
  {
    "args": {},
    "keyword": "schema",
  },
]
`;
